--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,11 @@
   }
 }
 
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 /* Global Reset */
 * {
   margin: 0;
